# Raylib-DinoGame

./: CMakeLists.txt  README.md
include/framework/: GameBase.h  GameObject2D.h  GameObjectCircle.h  GameObjectRect.h  SpriteAnimation.h  SpriteObject.h
include/game/: AssetManager.h  DinoGame.h  Game.h  GameState.h  Obstacle.h  Player.h  Settings.h  UIManager.h
include/misc/: easing.h
src/: main.cpp
src/game/: AssetManager.cpp  DinoGame.cpp  Game.cpp  Obstacle.cpp  Player.cpp  UIManager.cpp
src/misc/: easing.cpp
